<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TodoList</string>
    <string name="me" translatable="false">me</string>

    <string name="month">월</string>
    <string name="week">주</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="sunday">일</string>
    <string name="monday_long">월요일</string>
    <string name="tuesday_long">화요일</string>
    <string name="wednesday_long">수요일</string>
    <string name="thursday_long">목요일</string>
    <string name="friday_long">금요일</string>
    <string name="saturday_long">토요일</string>
    <string name="sunday_long">일요일</string>
    <string name="calendar_text">%d년 %d월</string>

    <string name="verify">인증하기</string>
    <string name="group">목표</string>
    <string name="time">시간 알림</string>
    <string name="more">더보기</string>
    <string name="simple">간편 입력</string>
    <string name="notice">공지사항</string>
    <string name="inquiry">문의하기</string>
    <string name="setting">설정</string>
    <string name="termsOfUse">이용약관</string>
    <string name="privacyPolicy">개인정보 정책</string>
    <string name="openSource">오픈소스</string>
    <string name="version">버전</string>
    <string name="logout">로그아웃</string>
    <string name="management">관리</string>
    <string name="check">확인</string>

    <string name="edit">수정</string>
    <string name="time_alarm">시간 알림</string>
    <string name="tomorrow">내일 하기</string>
    <string name="replay_tomorrow">내일 또 하기</string>
    <string name="change_date">날짜 바꾸기</string>
    <string name="change_order">순서 변경</string>
    <string name="move_storage">보관함으로 이동</string>
    <string name="do_today">오늘 하기</string>

    <string name="no_group">목표를 추가하여 할 일을 그룹별로 관리할 수 있습니다.</string>
    <string name="no_time">알림을 설정하면 오늘의 할 일에 대한 알림을 받아보실 수 있습니다.</string>
    <string name="no_routine">자주 입력하는 일정은 이곳에 요일, 기간별로 정리하세요. 목표 버튼을 눌러서 추가할 수 있습니다.</string>
    <string name="notification_no_todo">오늘의 할일이 없습니다.</string>
    <string name="notification_today">오늘의 일정</string>

    <string name="title">제목</string>
    <string name="publicSetting">공개설정</string>
    <string name="public_str">전체공개</string>
    <string name="internal">일부공개</string>
    <string name="private_str">나만보기</string>
    <string name="hidden">숨기기</string>
    <string name="color">색상</string>
    <string name="normal">일반</string>
    <string name="delete">삭제</string>
    <string name="progress">진행 상황</string>
    <string name="quit">종료하기</string>
    <string name="quit1">목표를 달성했어요!</string>
    <string name="quit2">기간이 종료됐어요!</string>
    <string name="quit3">아쉽지만 그만할래요</string>
    <string name="toast_public">목표를 공유하기 위해선\n회원 가입을 해야 합니다.</string>
    <string name="toast_reason">종료 사유를 선택해 주세요</string>
    <string name="toast_no_name">이름을 입력해 주세요</string>
    <string name="complete_group">종료된 목표</string>
    <string name="complete_dialog_content1">목표달성을 진심으로 축하드려요.\n다른 목표에서 또 만나요.</string>
    <string name="complete_dialog_content2">수고하셨습니다.\n다른 목표에서 또 만나요.</string>
    <string name="complete_dialog_content3">여기까지라 아쉽지만?\n다른 목표로 또 만날 수 있겠죠?</string>

    <string name="input">입력</string>
    <string name="complete">완료</string>
    <string name="am">오전</string>
    <string name="pm">오후</string>

    <string name="storage">보관함</string>
    <string name="toast_storage_complete">보관함에서는 완료할 수 없습니다</string>
    <string name="setting_calendar_sunday">달력에서 일요일부터 시작</string>
    <string name="order_complete">완료된 할 일 목록은 뒤로 정렬</string>
    <string name="language">언어</string>
    <string name="change_theme">앱 테마 변경하기</string>
    <string name="theme">테마</string>
    <string name="light">라이트</string>
    <string name="dark">다크</string>
    <string name="change_font">글꼴 변경하기</string>
    <string name="system">시스템</string>
    <string name="default_string">기본</string>

    <string name="start_date">시작 날짜</string>
    <string name="end_date">종료 날짜</string>
    <string name="day">요일</string>
    <string name="everyday">매일</string>
    <string name="cancel">취소</string>

    <string name="inquiry_guide">사용자들이 자주 묻는 질문을 확인하세요.</string>
    <string name="inquiry_question1">1. 다른 사용자들에게 할 일 공개가 되지 않아요</string>
    <string name="inquiry_answer1">할 일 공개 설정은 목표의 공개설정을 통해 지정하실 수 있으며 목표 관리 페이지에서 전체 공개 또는 일부 공개를 사용하여 다른 분들에게 할 일을 공개할 수 있습니다. 목표 관리 페이지에서 확인 부탁드립니다.</string>
    <string name="inquiry_question2">2. 애플 워치 연동이 되지 않습니다</string>
    <string name="inquiry_answer2">애플 워치는 연동 초반에 기기간의 연결이 잘 되지 않는 경우가 있으나 앱을 재설치하시거나 워치를 재시동하시면 문제가 해결되는 경우가 있습니다. 보통 한 번 연결되면 안정적으로 리스트가 업데이트되고 있습니다. 혹시 그후로도 잘 안되시면 말씀 부탁드립니다. 감사합니다.</string>
    <string name="inquiry_question3">3. 아이폰에서 위젯이 목록에 나타나지 않습니다.</string>
    <string name="inquiry_answer3">위젯이 OS문제로 간혹 리스트에서 보이지 않는 경우가 있습니다. 이럴 때는 기기를 재시작하시거나 앱을 몇 번 실행하신 후 보시면 확인하실 수 있을거라고 생각합니다. 시도 부탁드리며 잘 안되시면 말씀 부탁드립니다.</string>
    <string name="inquiry_question4">4. 팔로잉 취소 / 팔로워 삭제는 어떻게 하나요?</string>
    <string name="inquiry_answer4">상단의 +버튼을 누르셔서 팔로잉 / 팔로워 목록으로 이동하신 후 우측의 … 버튼을 눌러 팔로잉이나 팔로워를 목록에서 제거하실 수 있습니다.</string>
    <string name="inquiry_question5">5. 여러 기기에서 동시 접근이 되지 않습니다.</string>
    <string name="inquiry_answer5">계정당 태블릿 1대, 핸드폰 1대, PC에서의 무제한 접근을 허용하고 있습니다. 혹시 이와 같은 케이스가 아닌 경우에는 문의 부탁드립니다.</string>
    <string name="inquiry_question6">6. 좋아요 취소를 할 수 있나요?</string>
    <string name="inquiry_answer6">좋아요를 누른 순간 할 일 작성자에게 알림이 가는데 이때 작성자가 알림을 통해 할 일을 봤을 때 좋아요가 없으면 조금 실망할 수 있겠다는 생각을 해서 현재 좋아요 취소 기능을 넣지 않았습니다. 부디 양해 부탁드립니다.</string>
    <string name="inquiry_no_answer">아직 해결이 되지 않으셨나요?</string>
    <string name="inquiry_direct">제작자에게 직접 문의하기</string>

    <string name="systemDefault" translatable="false">System</string>
    <string name="systemEng" translatable="false">English</string>
    <string name="systemKor" translatable="false">한국어</string>
    <string name="systemJap" translatable="false">日本語</string>

    <string name="dummy" translatable="false">Lorem ipsum</string>
    <string name="dummyNumber" translatable="false">0</string>
</resources>