<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/whiteBlack"
    android:orientation="vertical"
    tools:context=".activity.MainActivity"
    tools:ignore="ContentDescription">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/toolbar_icon_size"
            android:layout_height="@dimen/toolbar_icon_size"
            android:layout_marginEnd="20dp"
            android:scaleType="center"
            android:src="@drawable/ic_calender_prev"
            app:tint="@color/blackWhite" />

        <TextView
            style="@style/text_default"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/default_hor_margin"
            android:text="@string/inquiry"
            android:textSize="@dimen/toolbar_font_size"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/big_hor_margin"
            android:layout_marginVertical="@dimen/default_ver_margin"
            android:orientation="vertical">

            <TextView
                style="@style/text_default"
                android:layout_marginBottom="@dimen/big_ver_margin"
                android:text="@string/inquiry_guide" />

            <TextView
                style="@style/inquiryQuestion"
                android:text="@string/inquiry_question1" />

            <TextView
                style="@style/inquiryAnswer"
                android:text="@string/inquiry_answer1" />

            <View
                style="@style/underline"
                android:layout_marginVertical="@dimen/big_ver_margin" />

            <TextView
                style="@style/inquiryQuestion"
                android:text="@string/inquiry_question2" />

            <TextView
                style="@style/inquiryAnswer"
                android:text="@string/inquiry_answer2" />

            <View
                style="@style/underline"
                android:layout_marginVertical="@dimen/big_ver_margin" />

            <TextView
                style="@style/inquiryQuestion"
                android:text="@string/inquiry_question3" />

            <TextView
                style="@style/inquiryAnswer"
                android:text="@string/inquiry_answer3" />

            <View
                style="@style/underline"
                android:layout_marginVertical="@dimen/big_ver_margin" />

            <TextView
                style="@style/inquiryQuestion"
                android:text="@string/inquiry_question4" />

            <TextView
                style="@style/inquiryAnswer"
                android:text="@string/inquiry_answer4" />

            <View
                style="@style/underline"
                android:layout_marginVertical="@dimen/big_ver_margin" />

            <TextView
                style="@style/inquiryQuestion"
                android:text="@string/inquiry_question5" />

            <TextView
                style="@style/inquiryAnswer"
                android:text="@string/inquiry_answer5" />

            <View
                style="@style/underline"
                android:layout_marginVertical="@dimen/big_ver_margin" />

            <TextView
                style="@style/inquiryQuestion"
                android:text="@string/inquiry_question6" />

            <TextView
                style="@style/inquiryAnswer"
                android:text="@string/inquiry_answer6" />

            <View
                style="@style/underline"
                android:layout_marginVertical="@dimen/big_ver_margin" />

            <TextView
                style="@style/text_default"
                android:layout_marginBottom="@dimen/default_ver_margin"
                android:text="@string/inquiry_no_answer"
                android:textSize="@dimen/inquiry_question_font_size"
                android:textStyle="bold" />

            <TextView
                style="@style/text_default"
                android:layout_marginBottom="@dimen/default_ver_margin"
                android:text="@string/inquiry_direct" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/big_ver_margin" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
