<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/toolbar_icon_size"
            android:layout_height="@dimen/toolbar_icon_size"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_calender_prev"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/default_hor_margin"
            android:text="@string/group"
            android:textColor="@color/black"
            android:textSize="@dimen/toolbar_font_size"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/checkGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/default_hor_margin"
            android:text="@string/check"
            android:textColor="@color/black"
            android:textSize="@dimen/toolbar_font_size"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/default_hor_margin"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@id/deleteBtn"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/todo_small_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/big_ver_margin"
                android:text="@string/title"
                android:textColor="@color/teal_200"
                android:textSize="@dimen/group_add_title_font_size" />

            <EditText
                android:id="@+id/groupTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_ver_margin"
                android:autofillHints=" "
                android:backgroundTint="@color/black"
                android:inputType="text"
                android:paddingBottom="@dimen/big_ver_margin"
                android:textColor="@color/black"
                android:textSize="@dimen/group_title_font_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_ver_margin"
                android:layout_marginBottom="@dimen/todo_small_margin"
                android:text="@string/publicSetting"
                android:textColor="@color/teal_200"
                android:textSize="@dimen/group_add_title_font_size" />

            <RadioGroup
                android:id="@+id/publicSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/todo_small_margin">

                <RadioButton
                    android:id="@+id/public1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFFFF"
                    android:button="@null"
                    android:drawableStart="@drawable/ic_storage"
                    android:drawableEnd="@drawable/btn_radio_custom"
                    android:drawablePadding="@dimen/radio_button_drawable_margin"
                    android:text="@string/public_str" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/todo_group_background" />

                <RadioButton
                    android:id="@+id/public2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFFFF"
                    android:button="@null"
                    android:drawableStart="@drawable/ic_storage"
                    android:drawableEnd="@drawable/btn_radio_custom"
                    android:drawablePadding="@dimen/radio_button_drawable_margin"
                    android:text="@string/internal" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/todo_group_background" />

                <RadioButton
                    android:id="@+id/public3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFFFF"
                    android:button="@null"
                    android:drawableStart="@drawable/ic_storage"
                    android:drawableEnd="@drawable/btn_radio_custom"
                    android:drawablePadding="@dimen/radio_button_drawable_margin"
                    android:text="@string/private_str" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/todo_group_background" />

                <RadioButton
                    android:id="@+id/public4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFFFF"
                    android:button="@null"
                    android:drawableStart="@drawable/ic_storage"
                    android:drawableEnd="@drawable/btn_radio_custom"
                    android:drawablePadding="@dimen/radio_button_drawable_margin"
                    android:text="@string/hidden" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/todo_group_background" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/big_ver_margin"
                android:text="@string/progress"
                android:textColor="@color/teal_200"
                android:textSize="@dimen/group_add_title_font_size" />

            <LinearLayout
                android:id="@+id/quitContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/todo_small_margin"
                android:layout_marginBottom="@dimen/default_ver_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/quit"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/quitBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_radio_uncheck" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/todo_group_background" />

            <RadioGroup
                android:id="@+id/quitGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <RadioButton
                    android:id="@+id/quit1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFFFF"
                    android:button="@null"
                    android:drawableStart="@drawable/ic_quit1"
                    android:drawableEnd="@drawable/btn_radio_custom2"
                    android:drawablePadding="@dimen/radio_button_drawable_margin"
                    android:text="@string/quit1" />

                <RadioButton
                    android:id="@+id/quit2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFFFF"
                    android:button="@null"
                    android:drawableStart="@drawable/ic_quit2"
                    android:drawableEnd="@drawable/btn_radio_custom2"
                    android:drawablePadding="@dimen/radio_button_drawable_margin"
                    android:text="@string/quit2" />

                <RadioButton
                    android:id="@+id/quit3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFFFF"
                    android:button="@null"
                    android:drawableStart="@drawable/ic_quit3"
                    android:drawableEnd="@drawable/btn_radio_custom2"
                    android:drawablePadding="@dimen/radio_button_drawable_margin"
                    android:text="@string/quit3" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/big_ver_margin"
                android:text="@string/color"
                android:textColor="@color/teal_200"
                android:textSize="@dimen/group_add_title_font_size" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/colorRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/todo_small_margin" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_hor_margin"
        android:layout_marginVertical="@dimen/default_ver_margin"
        android:background="@color/teal_200"
        android:stateListAnimator="@null"
        android:text="@string/delete"
        android:textColor="@color/red" />

</LinearLayout>